@@ -1,5 +1,9 @@
 [b]Version 0.6.6[/b]:
 
+(2008-12-24)
+ * Implemented a different way to select the initial subtitle track (or restore
+   the old one after a restart). Still needs some testing.
+
 (2008-12-23)
  * Now smplayer tries to update the subtitle tracks if they change during
    playback. This makes subtitles work if using dvdnav, and seems to fix
